--- a/config/crd/db/db.flanksource.com_kafkaclusters.yaml
+++ b/config/crd/db/db.flanksource.com_kafkaclusters.yaml
@@ -1,5 +1,3 @@
-
----
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -16,175 +14,159 @@ spec:
     singular: kafkacluster
   scope: Namespaced
   versions:
-  - additionalPrinterColumns:
-    - jsonPath: .spec.kafka.replicas
-      name: Kafka Replicas
-      type: integer
-    - jsonPath: .spec.kafka.resources.requests.memory
-      name: Mem
-      type: string
-    - jsonPath: .spec.kafka.resources.requests.cpu
-      name: CPU
-      type: string
-    - jsonPath: .spec.kafka.storage.size
-      name: Storage
-      type: string
-    - jsonPath: .spec.zookeeper.replicas
-      name: ZK Replicas
-      type: integer
-    - jsonPath: .spec.zookeeper.resources.requests.memory
-      name: Mem
-      type: string
-    - jsonPath: .spec.zookeeper.resources.requests.cpu
-      name: CPU
-      type: string
-    - jsonPath: .spec.zookeeper.storage.size
-      name: Storage
-      type: string
-    - jsonPath: .status.conditions[].status
-      name: Ready
-      type: string
-    name: v1
-    schema:
-      openAPIV3Schema:
-        properties:
-          apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-            type: string
-          kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-            type: string
-          metadata:
-            type: object
-          spec:
-            properties:
-              kafka:
-                properties:
-                  replicas:
-                    type: integer
-                  resources:
-                    description: ResourceRequirements describes the compute resource
-                      requirements.
-                    properties:
-                      limits:
-                        additionalProperties:
-                          anyOf:
-                          - type: integer
-                          - type: string
-                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
-                          x-kubernetes-int-or-string: true
-                        description: 'Limits describes the maximum amount of compute
-                          resources allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
-                        type: object
-                      requests:
-                        additionalProperties:
-                          anyOf:
-                          - type: integer
-                          - type: string
-                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
-                          x-kubernetes-int-or-string: true
-                        description: 'Requests describes the minimum amount of compute
-                          resources required. If Requests is omitted for a container,
-                          it defaults to Limits if that is explicitly specified, otherwise
-                          to an implementation-defined value. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
-                        type: object
-                    type: object
-                  storage:
-                    properties:
-                      size:
-                        description: Size. Required if persistence is enabled
-                        type: string
-                      storageClass:
-                        description: Storage class to use. If not set default will
-                          be used
-                        type: string
-                    type: object
-                  version:
-                    type: string
-                type: object
-              zookeeper:
-                properties:
-                  replicas:
-                    type: integer
-                  resources:
-                    description: ResourceRequirements describes the compute resource
-                      requirements.
-                    properties:
-                      limits:
-                        additionalProperties:
-                          anyOf:
-                          - type: integer
-                          - type: string
-                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
-                          x-kubernetes-int-or-string: true
-                        description: 'Limits describes the maximum amount of compute
-                          resources allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
-                        type: object
-                      requests:
-                        additionalProperties:
-                          anyOf:
-                          - type: integer
-                          - type: string
-                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
-                          x-kubernetes-int-or-string: true
-                        description: 'Requests describes the minimum amount of compute
-                          resources required. If Requests is omitted for a container,
-                          it defaults to Limits if that is explicitly specified, otherwise
-                          to an implementation-defined value. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
-                        type: object
-                    type: object
-                  storage:
-                    properties:
-                      size:
-                        description: Size. Required if persistence is enabled
-                        type: string
-                      storageClass:
-                        description: Storage class to use. If not set default will
-                          be used
-                        type: string
-                    type: object
-                  version:
-                    type: string
-                type: object
-            required:
-            - kafka
-            - zookeeper
-            type: object
-          status:
-            properties:
-              conditions:
-                items:
+    - additionalPrinterColumns:
+        - jsonPath: .spec.kafka.replicas
+          name: Kafka Replicas
+          type: integer
+        - jsonPath: .spec.kafka.resources.requests.memory
+          name: Mem
+          type: string
+        - jsonPath: .spec.kafka.resources.requests.cpu
+          name: CPU
+          type: string
+        - jsonPath: .spec.kafka.storage.size
+          name: Storage
+          type: string
+        - jsonPath: .spec.zookeeper.replicas
+          name: ZK Replicas
+          type: integer
+        - jsonPath: .spec.zookeeper.resources.requests.memory
+          name: Mem
+          type: string
+        - jsonPath: .spec.zookeeper.resources.requests.cpu
+          name: CPU
+          type: string
+        - jsonPath: .spec.zookeeper.storage.size
+          name: Storage
+          type: string
+        - jsonPath: .status.conditions[].status
+          name: Ready
+          type: string
+      name: v1
+      schema:
+        openAPIV3Schema:
+          properties:
+            apiVersion:
+              description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+              type: string
+            kind:
+              description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+              type: string
+            metadata:
+              type: object
+            spec:
+              properties:
+                kafka:
                   properties:
-                    lastHeartbeatTime:
-                      format: date-time
+                    replicas:
+                      type: integer
+                    resources:
+                      description: ResourceRequirements describes the compute resource requirements.
+                      properties:
+                        limits:
+                          additionalProperties:
+                            anyOf:
+                              - type: integer
+                              - type: string
+                            pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                            x-kubernetes-int-or-string: true
+                          description: 'Limits describes the maximum amount of compute resources allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                          type: object
+                        requests:
+                          additionalProperties:
+                            anyOf:
+                              - type: integer
+                              - type: string
+                            pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                            x-kubernetes-int-or-string: true
+                          description: 'Requests describes the minimum amount of compute resources required. If Requests is omitted for a container, it defaults to Limits if that is explicitly specified, otherwise to an implementation-defined value. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                          type: object
+                      type: object
+                    storage:
+                      properties:
+                        size:
+                          description: Size. Required if persistence is enabled
+                          type: string
+                        storageClass:
+                          description: Storage class to use. If not set default will be used
+                          type: string
+                      type: object
+                    version:
                       type: string
-                    lastTransitionTime:
-                      format: date-time
-                      type: string
-                    message:
-                      type: string
-                    reason:
-                      type: string
-                    status:
-                      type: string
-                    type:
-                      type: string
-                  required:
-                  - status
-                  - type
                   type: object
-                type: array
-            required:
-            - conditions
-            type: object
-        type: object
-    served: true
-    storage: true
-    subresources: {}
+                zookeeper:
+                  properties:
+                    replicas:
+                      type: integer
+                    resources:
+                      description: ResourceRequirements describes the compute resource requirements.
+                      properties:
+                        limits:
+                          additionalProperties:
+                            anyOf:
+                              - type: integer
+                              - type: string
+                            pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                            x-kubernetes-int-or-string: true
+                          description: 'Limits describes the maximum amount of compute resources allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                          type: object
+                        requests:
+                          additionalProperties:
+                            anyOf:
+                              - type: integer
+                              - type: string
+                            pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                            x-kubernetes-int-or-string: true
+                          description: 'Requests describes the minimum amount of compute resources required. If Requests is omitted for a container, it defaults to Limits if that is explicitly specified, otherwise to an implementation-defined value. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                          type: object
+                      type: object
+                    storage:
+                      properties:
+                        size:
+                          description: Size. Required if persistence is enabled
+                          type: string
+                        storageClass:
+                          description: Storage class to use. If not set default will be used
+                          type: string
+                      type: object
+                    version:
+                      type: string
+                  type: object
+              required:
+                - kafka
+                - zookeeper
+              type: object
+            status:
+              properties:
+                conditions:
+                  items:
+                    properties:
+                      lastHeartbeatTime:
+                        format: date-time
+                        type: string
+                      lastTransitionTime:
+                        format: date-time
+                        type: string
+                      message:
+                        type: string
+                      reason:
+                        type: string
+                      status:
+                        type: string
+                      type:
+                        type: string
+                    required:
+                      - status
+                      - type
+                    type: object
+                  type: array
+              required:
+                - conditions
+              type: object
+          type: object
+      served: true
+      storage: true
+      subresources: {}
 status:
   acceptedNames:
     kind: ""
