--- a/config/crd/db/db.flanksource.com_mongodbs.yaml
+++ b/config/crd/db/db.flanksource.com_mongodbs.yaml
@@ -4,14 +4,14 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.4.0
   creationTimestamp: null
-  name: elasticsearchdbs.db.flanksource.com
+  name: mongodbs.db.flanksource.com
 spec:
   group: db.flanksource.com
   names:
-    kind: ElasticsearchDB
-    listKind: ElasticsearchDBList
-    plural: elasticsearchdbs
-    singular: elasticsearchdb
+    kind: MongoDB
+    listKind: MongoDBList
+    plural: mongodbs
+    singular: mongodb
   scope: Namespaced
   versions:
     - name: v1
@@ -28,41 +28,12 @@ spec:
               type: object
             spec:
               properties:
-                domain:
+                cpu:
                   type: string
-                heap:
+                database:
                   type: string
-                ingress:
-                  properties:
-                    annotations:
-                      additionalProperties:
-                        type: string
-                      type: object
-                  type: object
-                replicas:
-                  type: integer
-                resources:
-                  description: ResourceRequirements describes the compute resource requirements.
-                  properties:
-                    limits:
-                      additionalProperties:
-                        anyOf:
-                          - type: integer
-                          - type: string
-                        pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
-                        x-kubernetes-int-or-string: true
-                      description: 'Limits describes the maximum amount of compute resources allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
-                      type: object
-                    requests:
-                      additionalProperties:
-                        anyOf:
-                          - type: integer
-                          - type: string
-                        pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
-                        x-kubernetes-int-or-string: true
-                      description: 'Requests describes the minimum amount of compute resources required. If Requests is omitted for a container, it defaults to Limits if that is explicitly specified, otherwise to an implementation-defined value. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
-                      type: object
-                  type: object
+                memory:
+                  type: string
                 storage:
                   properties:
                     size:
@@ -72,7 +43,7 @@ spec:
                       description: Storage class to use. If not set default will be used
                       type: string
                   type: object
-                version:
+                user:
                   type: string
               type: object
             status:
